# cppnd-capstone

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile
src/: extract_keyframes.py  keyframe_processor.cpp  keyframe_processor.h  main.cpp  message_queue.h  process_frame_event.cpp  process_frame_event.h  processed_frame_message.cpp  processed_frame_message.h
